# sse

real-time-sse-app/: package-lock.json  package.json
real-time-sse-app/src/: App.tsx
real-time-sse-backend/: server.js
real-time-sse-djangoserver/: pyproject.toml
real-time-sse-djangoserver/aaa/: .env
real-time-sse-djangoserver/aaa/aaa/: asgi.py  settings.py  urls.py  wsgi.py
real-time-sse-djangoserver/aaa/stream/: urls.py  views.py
