[tool.poetry]
name = "djangoserver"
version = "0.1.0"
description = ""
authors = ["tktk0430 <h.taku.0430.tech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
